1.0.2 (#76)
变更日志 [#74](https://github.com/wx98/km-quick-mybatis/pull/74)

1. version : 插件版本调整至 1.0.2
2 optimize : verifyPlugin 验证范围调整，只验证最新版本
3. readme: READMD.md CHANGELOG.md update wx98
4. optimize：通知工具 NotificationUtil不再建议功能分左右键
5. style：代码格式规范化
6. optimize：优化扫描方法调用缓存的扫描过程